syntax = "proto3";

package api.usercenter;

import "google/api/annotations.proto";
import "validate/validate.proto";
import "user/types/user.proto";
import "google/protobuf/empty.proto";
import "public/response/response.proto";


option go_package = "store/api/usercenter;ucpb";

service AuthService {

  rpc SendCode(SendCodeRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/api/usr/auth-codes"
      body: "*"
    };
  }
  rpc GetToken (GetTokenRequest) returns (Token) {
    option (google.api.http) = {
      get: "/api/usr/auth-tokens"
    };
  };

  rpc GetAppleAuthToken(GetAppleAuthTokenRequest) returns (Token) {
    option (google.api.http) = {
      get: "/api/usr/v1/apple-auth-tokens"
    };
  }
}


message GetAppleAuthTokenRequest {

  /*  message FullName {
      string familyName = 1;
      string enName = 2;
      string middleName = 3;
      string namePrefix = 4;
      string nameSuffix = 5;
      string nickname = 6;
    }*/

  string authorizationCode = 1;
  string email = 2;
  string nickname = 3;
  string identityToken = 4;
  uint32 realUserStatus = 5;
  string state = 6;
  string user = 7;
}


message Token {
  string token = 1;
  bool isNew = 2;
  string userId = 3;
}

message GetTokenRequest {
  string phone = 1;
  string code = 2;
}

message SendCodeRequest {
  string phone = 1;
}
